--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -12,6 +12,7 @@ on:
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_VERSION: 5.0.x
+  DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
 jobs:
   build:
@@ -45,7 +46,7 @@ jobs:
         VERSION="${arrTag[2]}"
         echo Version: $VERSION
         VERSION="${VERSION//v}"
-        dotnet pack -c Release -p:PackageVersion=$VERSION src\BeaKona.AutoInterfaceGenerator
+        dotnet pack -c Release -p:PackageVersion=$VERSION src/BeaKona.AutoInterfaceGenerator
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
