Types does not have to be in same compile unit..

--- a/AutoInterfaceSample/AutoInterfaceSample.csproj
+++ b/AutoInterfaceSample/AutoInterfaceSample.csproj
@@ -18,4 +18,8 @@
     <Analyzer Include="..\BeaKona.AutoInterfaceGenerator\bin\Debug\netstandard2.0\BeaKona.AutoInterfaceGenerator.dll" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestInterfaces\TestInterfaces.csproj" />
+  </ItemGroup>
+
 </Project>
