--- a/BeaKona.AutoInterfaceAttributes/BeaKona.AutoInterfaceAttributes.csproj
+++ b/BeaKona.AutoInterfaceAttributes/BeaKona.AutoInterfaceAttributes.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
 	  <LangVersion>latest</LangVersion>
 	  <Nullable>enable</Nullable>
+	  <PackageId>BeaKona.AutoInterfaceAttributes</PackageId>
+	  <Authors>BeaKona</Authors>
+	  <Description>Shared BeaKona.AutoInterface source generator attributes.</Description>
+	  <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	  <RepositoryUrl>https://github.com/beakona/AutoInterface</RepositoryUrl>
+	  <RepositoryType>git</RepositoryType>
+	  <Version>1.0.0</Version>
+	  <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
