--- a/AutoInterfaceSample/AutoInterfaceSample.csproj
+++ b/AutoInterfaceSample/AutoInterfaceSample.csproj
@@ -20,10 +20,13 @@
     <PackageReference Include="NLog" Version="5.2.8" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <ProjectReference Include="..\BeaKona.AutoInterfaceAttributes\BeaKona.AutoInterfaceAttributes.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
+    <ProjectReference Include="..\TestInterfacesNetStandard\TestInterfacesNetStandard.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TestInterfaces\TestInterfaces.csproj" />
+    <ProjectReference Include="..\TestInterfaces\TestInterfaces.csproj">
+      <Aliases></Aliases>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
