--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -44,8 +44,14 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
+    - name: Debug Variables
+      run: |
+        echo "Event Name: ${{ github.event_name }}"
+        echo "Ref: $GITHUB_REF"
+        echo "Ref Name: $GITHUB_REF_NAME"
     - name: Pack
       run: |
+        echo Ref: ${GITHUB_REF}
         arrTag=(${GITHUB_REF//\// })
         VERSION="${arrTag[2]}"
         echo Version before: $VERSION
