--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -3,8 +3,12 @@ name: NuGet
 on:
   release:
     types: [published]
-  workflow_dispatch: # This enables the manual button
+  workflow_dispatch:
     inputs:
+      manual_version:
+        description: 'Version to publish:'
+        required: true
+        default: '1.0.4-preview'
       reason:
         description: 'Please describe why are you running this manually?'
         required: false
@@ -51,12 +55,13 @@ jobs:
         echo "Ref Name: $GITHUB_REF_NAME"
     - name: Pack
       run: |
-        echo Ref: ${GITHUB_REF}
-        arrTag=(${GITHUB_REF//\// })
-        VERSION="${arrTag[2]}"
-        echo Version before: $VERSION
-        VERSION="${VERSION//v}"
-        echo Version after: $VERSION
+        if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          VERSION="${{ github.event.inputs.manual_version }}"
+          echo "Manual mode: Using version from input: $VERSION"
+        else
+          VERSION="${{ github.ref_name }}"
+          echo "Release mode: Using version from tag: $VERSION"
+        fi
         echo "dotnet pack -c Release -p:PackageVersion=$VERSION BeaKona.AutoInterfaceGenerator"
         dotnet pack -c Release -p:PackageVersion=$VERSION BeaKona.AutoInterfaceGenerator
     - name: Upload Artifact
